--- a/project2/about.css
+++ b/project2/about.css
@@ -1,29 +1,28 @@
 @font-face {
     font-family: bebasneue;
     src: url(./fonts/BebasNeue-Regular.ttf);
+    font-display: swap;
 }
 
 @font-face {
     font-family: ubuntu;
     src: url(./fonts/Ubuntu-Regular.ttf);
+    font-display: swap;
 }
 
 @font-face {
     font-family: roboto;
     src: url(./fonts/RobotoCondensed-Regular.ttf);
+    font-display: swap;
 }
 
-@keyframes fadeOut {
+@keyframes fadeIn {
     from {
       opacity: 0;
     }
     to {
       opacity: 1;
     }
-  }
-
-a:visited {
-    text-decoration: none; 
 }
 
 a {
@@ -31,14 +30,26 @@ a {
     color: #7fb1ce;
 }
 
+a:visited {
+    text-decoration: none;
+}
+
 body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: bebasneue;
+    font-family: bebasneue, sans-serif;
     scroll-behavior: smooth;
-    animation: fadeOut 1s ease-in-out;
+    animation: fadeIn 1s ease-in-out;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .navigation-burger {
@@ -151,7 +162,7 @@ body, html {
     color: #00578d;
 }
 
-section{
+section {
     text-align: center;
     color: #959596;
 }
@@ -160,7 +171,7 @@ section{
     display: flex;
     justify-content: center;
     gap: 150px;
-    margin-top: 50px;
+    margin-top: 150px;
 }
 
 .column {
@@ -188,7 +199,7 @@ section{
 }
 
 .con {
-    font-family: roboto; 
+    font-family: roboto, sans-serif; 
     margin: auto;
     width: 800px;
     align-content: center;
@@ -197,7 +208,7 @@ section{
     color: rgb(83, 83, 83);
 }
 
-.con__button{
+.con__button {
     background-color: #215779;
     color: #6ab1ce;
     width: 300px;
@@ -205,7 +216,7 @@ section{
     font-size: 25px;
     padding: 5px 1px;
     border: none;
-    font-family: bebasneue; 
+    font-family: bebasneue, sans-serif; 
     cursor: pointer;
     text-align: center;
     transition: background-color 0.5s ease, transform 0.5s ease;
@@ -216,8 +227,12 @@ section{
     color: #a9e7ff;
 }
 
+footer{
+    margin-top: auto;
+}
+
 .footer {
-    font-family: roboto;
+    font-family: roboto, sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -225,17 +240,16 @@ section{
     color: white;
     padding: 10px 20px;
     font-size: 18px;
-    margin-top: 408px;
-  }
-  
-  .footer-left a {
+}
+
+.footer-left a {
     color: #ffffff;
     text-decoration: none;
-  }
-  
-  .footer-right img {
+}
+
+.footer-right img {
     width: 30px;
     height: 30px;
     margin-left: 10px;
     cursor: pointer;
-  }
+}
