--- a/project2/media_about.css
+++ b/project2/media_about.css
@@ -16,7 +16,7 @@
         display: flex;
         width: 40px;
         height: 30px;
-        left: 290px;
+        right: 10%;
         top: 18px;
     }
 
@@ -64,7 +64,6 @@
 
     .container {
         flex-direction: column;
-        width: 80%;
         margin: auto;
         gap: 70px;
     }
