--- a/project2/media_cart.css
+++ b/project2/media_cart.css
@@ -16,7 +16,7 @@
         display: flex;
         width: 40px;
         height: 30px;
-        left: 290px;
+        right: 10%;
         top: 18px;
     }
 
