--- a/project2/media_product.css
+++ b/project2/media_product.css
@@ -99,7 +99,7 @@
         display: flex;
         width: 40px;
         height: 30px;
-        left: 800px;
+        right: 10%;
         top: 18px;
     }
 
