--- a/project2/media_index.css
+++ b/project2/media_index.css
@@ -1,9 +1,18 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @media (max-width: 768px) {
     /* iPhone 12 Pro */
     .navigation__home__ul {
         display: none;
         flex-direction: column;
-        gap: 20px;
+        gap: 30px;
         align-items: center;
         width: 100%;
         position: absolute;
@@ -22,22 +31,33 @@
 
     .burger-menu {
         display: flex;
+        z-index: 9999;
     }
 
     .navigation-burger__menu {
         display: none;
         flex-direction: column;
-        position: absolute;
-        top: 30px;
-        left: -30%;
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
-        background: rgb(0, 0, 0);
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.8);
         padding: 40px 20px;
         text-align: center;
+        z-index: 1000;
+        justify-content: center;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+        pointer-events: none;
+        backdrop-filter: blur(5px);
     }
 
     .navigation-burger__menu.active {
         display: flex;
+        opacity: 1;
+        pointer-events: all;
+        animation: fadeIn 0.3s ease-in-out;
     }
 
     .burger-menu.active span:nth-child(1) {
@@ -52,7 +72,6 @@
         transform: translateY(-10px) rotate(-45deg);
     }
 
-
     .navigation__home {
         color: #3182b5;
         font-size: 50px;
@@ -64,29 +83,32 @@
         flex-direction: column;
         gap: 50px;
     }
+
     .black-background__cont__h1 {
         font-size: 50px;
     }
+
     .black-background__cont__image {
         width: 200px;
     }
+
     .white-background__container__button,
     .black-background__cont__h1__button {
         width: 120px;
         font-size: 16px;
     }
 
-    .black-background__cont__image{
+    .black-background__cont__image {
         position: relative;
         top: 50px;
         width: 300px;
     }
 
-    .black-background__cont__h1__button{
+    .black-background__cont__h1__button {
         display: none;
     }
 
-    .white-background{
+    .white-background {
         gap: 0px;
         display: inline-flex;
         flex-direction: column;
@@ -100,17 +122,17 @@
         height: 500px;
     }
 
-    .white-background__span-container__span-title{
+    .white-background__span-container__span-title {
         line-height: 40px;
     }
 
-    .carousel img{
+    .carousel img {
         width: 350px;
         height: 350px;
         margin-left: 80px;
     }
 
-    .checkered-background__container{
+    .checkered-background__container {
         width: 80%;
         align-content: center;
         align-items: center;
@@ -124,33 +146,32 @@
         margin-top: 50px;
     }
 
-    .checkered-background__container__text{
+    .checkered-background__container__text {
         font-size: 55px;
         line-height: 50px;
     }
 
-    .checkered-background__container__textbox{
+    .checkered-background__container__textbox {
         padding: 0px;
         display: grid;
         width: 80%;
         grid-template-columns: repeat(2, 1fr);
         margin-top: 50px;
-
     }
 
-    .end-background__textbox__bigtext{
+    .end-background__textbox__bigtext {
         font-size: 55px;
     }
 
-    .end-background__textbox{
+    .end-background__textbox {
         margin: 20px;
     }
 
-    .contact-form{
+    .contact-form {
         width: 80%;
     }
 
-    .two-columns{
+    .two-columns {
         display: flex;
         gap: 18px;
         flex-direction: column;
@@ -164,10 +185,11 @@
         width: 80%;
     }
 
-    .con__title{
+    .con__title {
         line-height: 30px;
     }
 }
+
 
 @media (width: 1024px) {
     /* iPad Pro */
