--- a/project2/products.css
+++ b/project2/products.css
@@ -1,16 +1,19 @@
 @font-face {
     font-family: bebasneue;
     src: url(./fonts/BebasNeue-Regular.ttf);
+    font-display: swap;
 }
 
 @font-face {
     font-family: ubuntu;
     src: url(./fonts/Ubuntu-Regular.ttf);
+    font-display: swap;
 }
 
 @font-face {
     font-family: roboto;
     src: url(./fonts/RobotoCondensed-Regular.ttf);
+    font-display: swap;
 }
 
 @keyframes fadeOut {
@@ -20,7 +23,7 @@
     to {
       opacity: 1;
     }
-  }
+}
 
 a:visited {
     text-decoration: none; 
@@ -34,13 +37,14 @@ a {
 body, html {
     margin: 0;
     padding: 0;
-    height: 100%;
     font-family: bebasneue, sans-serif;
     scroll-behavior: smooth;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeOut 1s ease-in-out;
     overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
+}
+
+.black-background__cont__h1 {
+    animation: fadeOut 3s ease-in-out forwards;
 }
 
 .navigation-burger {
@@ -89,7 +93,7 @@ body, html {
 .navigation-burger__menu a {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 50px;
 }
 
 .navigation {
